unpackaged/post/08_redu_object_tracking/objects/rio_ed__Attendance__c.object
<CustomObject>
	<fields>
        <fullName>rio_ed__Session_Connection__c</fullName>
        <label>Session Connection</label>
        <referenceTo>rio_ed__Session_Connection__c</referenceTo>
        <relationshipLabel>Attendances</relationshipLabel>
        <relationshipName>Attendances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rio_ed__Check_In__c</fullName>
        <label>Check In</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>rio_ed__Check_Out__c</fullName>
        <label>Check Out</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>rio_ed__Session_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The date that the session was attended</description>
        <inlineHelpText>The date that the session was attended</inlineHelpText>
        <label>Session Date</label>
        <type>Date</type>
    </fields>
    <label>Attendance</label>
    <nameField>
        <displayFormat>AT-{000000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>